kubernetes/immich/helm/immich/server.yaml
---
# Source: immich/templates/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: server
    app.kubernetes.io/service: immich-server
    app.kubernetes.io/version: v2.6.3
  namespace: immich
spec:
  type: ClusterIP
  ports:
    - port: 2283
      targetPort: http
      protocol: TCP
      name: http
      appProtocol: kubernetes.io/ws
        
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: server


---
# Source: immich/templates/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: immich
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: server
    app.kubernetes.io/version: v2.6.3
  annotations:
    reloader.stakater.com/auto: "true"
  namespace: immich
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/name: server
      app.kubernetes.io/instance: immich
  template:
    metadata:
      labels: 
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: immich
        app.kubernetes.io/name: server
    spec: 
      enableServiceLinks: false
      serviceAccountName: immich-server
      automountServiceAccountToken: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      dnsPolicy: ClusterFirst
      containers: 
        - env:
          - name: DB_DATABASE_NAME
            value: immich
          - name: DB_HOSTNAME
            value: immich-postgres-rw
          - name: DB_PASSWORD
            valueFrom:
              secretKeyRef:
                key: password
                name: immich-postgres-app
          - name: DB_PORT
            value: "5432"
          - name: DB_USERNAME
            value: immich
          - name: IMMICH_MACHINE_LEARNING_URL
            value: http://immich-machine-learning:3003
          - name: REDIS_HOSTNAME
            value: immich-valkey
          - name: REDIS_PASSWORD
            valueFrom:
              secretKeyRef:
                key: valkey-password
                name: immich-valkey
          - name: REDIS_PORT
            value: "6379"
          - name: TZ
            value: America/New_York
          image: ghcr.io/immich-app/immich-server:v2.6.3
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/server/ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          name: main
          ports:
          - containerPort: 2283
            name: http
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/server/ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /api/server/ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          volumeMounts:
          - mountPath: /data
            name: data
      volumes: 
        - name: data
          persistentVolumeClaim:
            claimName: immich-library


  

---
# Source: immich/templates/server.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-server
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: server
    app.kubernetes.io/version: v2.6.3
  annotations:
    ak-oidc-callback: /auth/login
    ak-oidc-extra-redirects: |
      https://immich.k.oneill.net/user-settings
      app.immich:///oauth-callback
    ak-path-exclude: /api(/|$)
    ak-type: oidc
    cert-manager.io/cluster-issuer: letsencrypt
    gethomepage.dev/description: Photo & Video Backup
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/icon: immich.png
    gethomepage.dev/name: Immich
    gethomepage.dev/pod-selector: app.kubernetes.io/name=server
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  namespace: immich
spec:
  tls:
    - hosts:
        - "immich.k.oneill.net"
      secretName: "immich-tls"
  rules:
    - host: "immich.k.oneill.net"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: immich-server
                port:
                  number: 2283
